--- a/pages/about.html
+++ b/pages/about.html
@@ -58,8 +58,8 @@
         <div class="about">
             <h1>Acerca de este Sitio Web</h1>
             <p>
-            Este es un portafolio muy sencillo compuesto de 4 páginas, maquetado con HTML y estilizado con CSS, con el objetivo de servir de presentacion para el curso FullStack Java del programa Codo a Codo 4.0. <br>
-            Para diseñar este proyecto me basé en el portafolio de Adam Matt, me gusto el estilo minimalista y simple y basado en eso hice mi próprio bosquejo. <br>
+            Este es un portafolio muy sencillo compuesto de 4 páginas, maquetado con HTML y estilizado con CSS, con el objetivo de servir de presentacion para el curso FullStack Java del programa Codo a Codo 4.0. Este sitio es full responsive, adaptable a cualquier pantalla. <br>
+            Para diseñar este proyecto me basé en el portafolio de Adam Matt, me gusto el estilo minimalista y simple y basado en eso hice mi própio bosquejo. <br>
             Te recuerdo que podes consultar todo el codigo del sitio en mi pagina de Github.
             </p>
             <p>Editor: Visual Estudio Code</p>
@@ -109,5 +109,6 @@
 
     </footer>
     
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.min.js" integrity="sha384-mQ93GR66B00ZXjt0YO5KlohRA5SY2XofN4zfuZxLkoj1gXtW8ANNCe9d5Y3eG5eD" crossorigin="anonymous"></script>
 </body>
 </html>
